[project]
name = "dapy"
version = "0.3.1"
authors = [
    {name = "Xavier Défago", email = "defago@c.titech.ac.jp"},
]
description = "A Python package simulating distributed algorithms."
readme = "README.md"
license = "MIT"
requires-python = ">=3.13"

keywords = ["distributed", "algorithms", "simulation"]

dependencies = []

[project.optional-dependencies]
json = [
    "classifiedjson >= 1.1",
]
ui = [
    "PySide6 >= 6.10",
    "networkx >= 3.6",
    "numpy >= 2.4",
]

[project.scripts]
dapyview = "dapyview.main:main"

[project.urls]
homepage = "https://xdefago.github.io/dapy"
documentation = "https://xdefago.github.io/dapy/api"
repository = "https://github.com/xdefago/dapy.git"

[dependency-groups]
dev = [
    "pytest>=9.0",        # Testing framework
    "black>=25.12",       # Code formatter
    "isort>=7.0",         # Import sorter
    "ruff>=0.14",         # Fast Python linter (Rust-based)
    "pdoc>=16.0",         # Documentation generator
    #
    "dapy[json]",  # For testing with JSON serialization
    "pyinstaller>=6.17.0", # For building standalone executables (dapyview)
]
ui = [
    "PySide6 >= 6.10",
    "networkx >= 3.6",
    "numpy >= 2.4",
]

[tool.uv.workspace]
members = ["dapy"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = [
    "-v",
    "--strict-markers",
]
markers = [
    "parametrize: mark test to run with multiple parameter sets",
]

[tool.ruff]
line-length = 120
indent-width = 4

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"

[tool.ruff.lint]
select = [
    "F",   # pyflakes
    "E",   # pycodestyle
    "I",   # isort
    "ANN", # flake8 type annotations
    "RUF", # ruff-specific rules
]
fixable = ["ALL"]
ignore = [
    "RUF003",  # Allow mathematical Unicode symbols (e.g., ∪ for set union) in pseudocode comments
]

[tool.isort]
known_first_party = ["dapy"]
ensure_newline_before_comments = true
force_grid_wrap = 0
include_trailing_comma = true
line_length = 120
lines_between_types = 1
multi_line_output = 3
use_parentheses = true

[build-system]
requires = ["uv_build>=0.9.5,<0.10.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-name = ["dapy", "dapyview"]
