[project]
name = "my-distributed-algorithm"
version = "0.1.0"
description = "A distributed algorithm project using dapy"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "dapy @ git+https://github.com/xdefago/dapy.git",
]

[project.optional-dependencies]
json = [
    "dapy[json] @ git+https://github.com/xdefago/dapy.git",
]

[project.scripts]
run-bcast = "broadcast.run_bcast:main"
run-my-algo = "my_algo.run_my_algo:main"

[build-system]
requires = ["uv_build>=0.9.5,<0.10.0"]
build-backend = "uv_build"

[tool.uv]
dev-dependencies = []
